[package]
name = "sourcetrail"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-std = { version = "1", features = ["attributes"] }
chrono = "0.4"
derive_builder = "0.20"
log = "0.4"
num_enum = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-async-std"] }
thiserror = "1"
